--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.datasource.initialization-mode=embedded
-spring.datasource.schema=classpath*:/createScripts/*.sql
+#spring.datasource.schema=classpath*:/createScripts/*.sql
 #spring.datasource.data=classpath*:/insertScripts/*.sql
  
 spring.h2.console.path=/h2console
